# MSearchDB

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STATUS.md  mise.toml  session-ses_31dc.md  session-ses_31ee.md  session-ses_322c.md  session-status.md
crates/client/: Cargo.toml
crates/client/python/: pyproject.toml
crates/client/python/examples/: demo.py
crates/client/python/msearchdb/: __init__.py  async_client.py  bulk.py  client.py  exceptions.py  models.py  query_builder.py
crates/client/python/msearchdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crates/client/python/tests/: test_client.py  test_integration.py  test_query_builder.py
crates/client/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  log_store.rs  network.rs  quorum.rs  raft_node.rs  state_machine.rs  types.rs
crates/consensus/tests/: chaos_engineering.rs  chaos_test.rs  cluster_test.rs  write_path_test.rs
crates/core/: Cargo.toml
crates/core/src/: cluster.rs  cluster_router.rs  collection.rs  config.rs  consistency.rs  consistent_hash.rs  document.rs  error.rs  lib.rs  query.rs  read_coordinator.rs  rebalancer.rs  security.rs  snapshot.rs  traits.rs  vector_clock.rs
crates/core/tests/: integration_test.rs
crates/index/: Cargo.toml
crates/index/src/: analyzer.rs  collection_index.rs  highlighting.rs  lib.rs  query_builder.rs  schema_builder.rs  tantivy_index.rs
crates/index/tests/: index_integration.rs  index_tests.rs
crates/network/: Cargo.toml  build.rs
crates/network/src/: client.rs  connection_pool.rs  lib.rs  scatter_gather.rs  server.rs  tls.rs
crates/network/tests/: network_integration.rs
crates/node/: Cargo.toml
crates/node/benches/: performance.rs
crates/node/src/: admin_tui.rs  cache.rs  cluster_manager.rs  dto.rs  errors.rs  lib.rs  main.rs  metrics.rs  middleware.rs  observability.rs  session.rs  snapshot_manager.rs  state.rs  write_batcher.rs
crates/node/src/handlers/: admin.rs  aliases.rs  bulk.rs  cluster.rs  collections.rs  documents.rs  mod.rs  search.rs  snapshot.rs
crates/node/tests/: api_integration.rs  cluster_manager_integration.rs  security_integration.rs  snapshot_integration.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memtable.rs  rocksdb_backend.rs  wal.rs
crates/storage/tests/: storage_integration.rs  storage_tests.rs
docker/: Dockerfile  docker-compose.yml  node.toml  prometheus.yml
docker/grafana/dashboards/: msearchdb.json
proto/: msearchdb.proto
tests/python/: test_10k_write_search.py  test_replication.py
