[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/index",
    "crates/consensus",
    "crates/network",
    "crates/node",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/msearchdb/msearchdb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Hashing
sha2 = "0.10"

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Concurrent collections
dashmap = "5"

# In-memory LRU cache
moka = { version = "0.12", features = ["future"] }

# Async traits
async-trait = "0.1"

# Compression / archiving
zstd = "0.13"
tar = "0.4"

# Storage engine
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
bytes = "1"
rmp-serde = "1"
crossbeam-skiplist = "0.1"
crc32fast = "1"
tempfile = "3"

# Full-text search engine
tantivy = "0.22"
jieba-rs = "0.6"

# Consensus / Raft
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# gRPC networking
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
tonic-build = "0.11"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Prometheus metrics
prometheus = "0.13"

# Structured logging / file rotation
tracing-appender = "0.2"

# OpenTelemetry distributed tracing
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# HTTP / REST API
axum = "0.7"
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.5", features = ["compression-gzip", "cors", "trace", "timeout"] }
http = "1"
hyper = "1"

# Random number generation (used by chaos testing framework)
rand = "0.8"

# Security / TLS / Auth
jsonwebtoken = "9"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Internal crates
msearchdb-core = { path = "crates/core" }
msearchdb-storage = { path = "crates/storage" }
msearchdb-index = { path = "crates/index" }
msearchdb-consensus = { path = "crates/consensus" }
msearchdb-network = { path = "crates/network" }
msearchdb-node = { path = "crates/node" }
msearchdb-client = { path = "crates/client" }
