[package]
name = "msearchdb-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client library for MSearchDB"

[dependencies]
msearchdb-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
