[package]
name = "msearchdb-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raft consensus implementation for MSearchDB"

[dependencies]
msearchdb-core = { workspace = true }
msearchdb-storage = { workspace = true }
msearchdb-index = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
openraft = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
