[package]
name = "msearchdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types and traits for MSearchDB"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
