[package]
name = "msearchdb-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full-text search indexing engine for MSearchDB"

[dependencies]
msearchdb-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tantivy = { workspace = true }
jieba-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
