[package]
name = "msearchdb-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC and HTTP networking layer for MSearchDB"

[dependencies]
msearchdb-core = { workspace = true }
msearchdb-consensus = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
openraft = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
