[package]
name = "msearchdb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage engine for MSearchDB"

[dependencies]
msearchdb-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rocksdb = { workspace = true }
bytes = { workspace = true }
rmp-serde = { workspace = true }
crossbeam-skiplist = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
